task3/log/build_2025-11-14_19-52-24/action_demo_pkg/stderr.log
  File "/root/ros_ws/tasks/task3/install/action_demo_pkg/lib/python3.10/site-packages/action_demo_pkg/goal_tracker_server.py", line 21
    	def messages_store(self, msg=None)
    	                                  ^
SyntaxError: expected ':'

